v0.20.0/_sources/_generated/groups/users.rst.txt
Users
=====

This section details User-related Linode CLI commands.

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON
.. rst-class:: action-has-keywords

.. _commands_users_list:

`list <https://techdocs.akamai.com/linode-api/reference/get-users>`_
--------------------------------------------------------------------

.. rst-class:: action-keyword

:action-keyword-key:`Aliases:`
:action-keyword-values:`ls`


Returns a paginated list of all users on your account.

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Usage

.. rst-class:: action-subheading-description

The format accepted by this command.



..  code-block:: bash

    linode-cli users list [-h] [--username username]
        [--order-by {username}] [--order {asc,desc}]



.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli users list






.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Filterable Attributes

.. rst-class:: action-subheading-description

Arguments used to define a filter for response entries.




.. rst-class:: action-filterable-field-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 98

    * - Name
      - Type
      - Description

    * - :action-table-field-name:`\-\-username`
      - :action-table-field-type:`str`
      - The User's username.






.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Result Attributes

.. rst-class:: action-subheading-description

The attributes returned by this command.




.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`email` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`example_user@linode.com`
      - The email address for the User.

    * - :action-table-field-name:`password_created` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`2018-01-01T01:01:01`
      - The date and time when this User's current password was created.

    * - :action-table-field-name:`restricted` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`true`
      - If true, the User must be granted access to perform actions or access entities on this Account.

    * - :action-table-field-name:`ssh_keys` 
      - :action-table-field-type:`[]str`
      - :action-table-field-example:`["home-pc", "laptop"]`
      - A list of SSH Key labels added by this User.

    * - :action-table-field-name:`tfa_enabled` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`true`
      - A boolean value indicating if the User has Two Factor Authentication (TFA) enabled.

    * - :action-table-field-name:`user_type` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`parent`
      - If the user belongs to a `parent or child account <https://www.linode.com/docs/guides/parent-child-accounts/>`_ relationship, this defines the user type in the respective account.

    * - :action-table-field-name:`username` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`example_user`
      - The User's username.

    * - :action-table-field-name:`verified_phone_number` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`+5555555555`
      - The phone number verified for this User Profile with the `Verify a phone number <https://techdocs.akamai.com/linode-api/reference/post-profile-phone-number-verify>`_ operation.




.. _commands_users_list_attribute_sections_last_login:

.. rst-class:: action-section-header

last_login


.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`last_login.login_datetime` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`2018-01-01T01:01:01`
      - The date and time of this User's most recent login attempt.

    * - :action-table-field-name:`last_login.status` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`successful`
      - The result of the most recent login attempt for this User.








------------

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. _commands_users_view:

`view <https://techdocs.akamai.com/linode-api/reference/get-user>`_
-------------------------------------------------------------------


Returns information about a single user on your account.

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Usage

.. rst-class:: action-subheading-description

The format accepted by this command.



..  code-block:: bash

    linode-cli users view [-h] [--username username]
        [--order-by {username}] [--order {asc,desc}] username



.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli users view example_user




.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Parameters

.. rst-class:: action-subheading-description

Positional parameters used to define the resource this command should target.




.. rst-class:: action-parameter-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 98

    * - Name
      - Type
      - Description

    * - :action-table-field-name:`username`
      - :action-table-field-type:`str`
      - The username to look up.








.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Result Attributes

.. rst-class:: action-subheading-description

The attributes returned by this command.




.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`email` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`example_user@linode.com`
      - The email address for the User.

    * - :action-table-field-name:`password_created` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`2018-01-01T01:01:01`
      - The date and time when this User's current password was created.

    * - :action-table-field-name:`restricted` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`true`
      - If true, the User must be granted access to perform actions or access entities on this Account.

    * - :action-table-field-name:`ssh_keys` 
      - :action-table-field-type:`[]str`
      - :action-table-field-example:`["home-pc", "laptop"]`
      - A list of SSH Key labels added by this User.

    * - :action-table-field-name:`tfa_enabled` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`true`
      - A boolean value indicating if the User has Two Factor Authentication (TFA) enabled.

    * - :action-table-field-name:`user_type` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`parent`
      - If the user belongs to a `parent or child account <https://www.linode.com/docs/guides/parent-child-accounts/>`_ relationship, this defines the user type in the respective account.

    * - :action-table-field-name:`username` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`example_user`
      - The User's username.

    * - :action-table-field-name:`verified_phone_number` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`+5555555555`
      - The phone number verified for this User Profile with the `Verify a phone number <https://techdocs.akamai.com/linode-api/reference/post-profile-phone-number-verify>`_ operation.




.. _commands_users_view_attribute_sections_last_login:

.. rst-class:: action-section-header

last_login


.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`last_login.login_datetime` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`2018-01-01T01:01:01`
      - The date and time of this User's most recent login attempt.

    * - :action-table-field-name:`last_login.status` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`successful`
      - The result of the most recent login attempt for this User.








------------

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. _commands_users_create:

`create <https://techdocs.akamai.com/linode-api/reference/post-user>`_
----------------------------------------------------------------------


Creates a user on your account.

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Usage

.. rst-class:: action-subheading-description

The format accepted by this command.



..  code-block:: bash

    linode-cli users create [-h] [--username username]
        [--restricted restricted] [--email email]



.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli users create \
        --username example_user \
        --email example_user@linode.com \
        --restricted true





.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Arguments

.. rst-class:: action-subheading-description

Additional fields used to execute this request.





.. rst-class:: action-argument-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`\-\-email` :action-table-field-required:`*`
      - :action-table-field-type:`str`
      - :action-table-field-example:`example_user@linode.com`
      - The email address for the User.

    * - :action-table-field-name:`\-\-username` :action-table-field-required:`*`
      - :action-table-field-type:`str`
      - :action-table-field-example:`example_user`
      - The User's username.

    * - :action-table-field-name:`\-\-restricted`
      - :action-table-field-type:`bool`
      - :action-table-field-example:`true`
      - If true, the User must be granted access to perform actions or access entities on this Account.







.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Result Attributes

.. rst-class:: action-subheading-description

The attributes returned by this command.




.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`email` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`example_user@linode.com`
      - The email address for the User.

    * - :action-table-field-name:`password_created` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`2018-01-01T01:01:01`
      - The date and time when this User's current password was created.

    * - :action-table-field-name:`restricted` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`true`
      - If true, the User must be granted access to perform actions or access entities on this Account.

    * - :action-table-field-name:`ssh_keys` 
      - :action-table-field-type:`[]str`
      - :action-table-field-example:`["home-pc", "laptop"]`
      - A list of SSH Key labels added by this User.

    * - :action-table-field-name:`tfa_enabled` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`true`
      - A boolean value indicating if the User has Two Factor Authentication (TFA) enabled.

    * - :action-table-field-name:`username` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`example_user`
      - The User's username.

    * - :action-table-field-name:`verified_phone_number` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`+5555555555`
      - The phone number verified for this User Profile with the `Verify a phone number <https://techdocs.akamai.com/linode-api/reference/post-profile-phone-number-verify>`_ operation.




.. _commands_users_create_attribute_sections_last_login:

.. rst-class:: action-section-header

last_login


.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`last_login.login_datetime` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`2018-01-01T01:01:01`
      - The date and time of this User's most recent login attempt.

    * - :action-table-field-name:`last_login.status` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`successful`
      - The result of the most recent login attempt for this User.








------------

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. _commands_users_update:

`update <https://techdocs.akamai.com/linode-api/reference/put-user>`_
---------------------------------------------------------------------


Update information about a user on your account, including its restricted status.

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Usage

.. rst-class:: action-subheading-description

The format accepted by this command.



..  code-block:: bash

    linode-cli users update [-h] [--restricted restricted]
        [--email email] [--username username] username



.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli users update example_user \
        --username example_user \
        --email example@linode.com \
        --restricted true




.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Parameters

.. rst-class:: action-subheading-description

Positional parameters used to define the resource this command should target.




.. rst-class:: action-parameter-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 98

    * - Name
      - Type
      - Description

    * - :action-table-field-name:`username`
      - :action-table-field-type:`str`
      - The username to look up.






.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Arguments

.. rst-class:: action-subheading-description

Additional fields used to execute this request.





.. rst-class:: action-argument-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`\-\-email`
      - :action-table-field-type:`str`
      - :action-table-field-example:`example_user@linode.com`
      - The email address for the User.

    * - :action-table-field-name:`\-\-restricted`
      - :action-table-field-type:`bool`
      - :action-table-field-example:`true`
      - If true, the User must be granted access to perform actions or access entities on this Account.

    * - :action-table-field-name:`\-\-username`
      - :action-table-field-type:`str`
      - :action-table-field-example:`example_user`
      - The User's username.







.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Result Attributes

.. rst-class:: action-subheading-description

The attributes returned by this command.




.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`email` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`example_user@linode.com`
      - The email address for the User.

    * - :action-table-field-name:`password_created` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`2018-01-01T01:01:01`
      - The date and time when this User's current password was created.

    * - :action-table-field-name:`restricted` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`true`
      - If true, the User must be granted access to perform actions or access entities on this Account.

    * - :action-table-field-name:`ssh_keys` 
      - :action-table-field-type:`[]str`
      - :action-table-field-example:`["home-pc", "laptop"]`
      - A list of SSH Key labels added by this User.

    * - :action-table-field-name:`tfa_enabled` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`true`
      - A boolean value indicating if the User has Two Factor Authentication (TFA) enabled.

    * - :action-table-field-name:`user_type` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`parent`
      - If the user belongs to a `parent or child account <https://www.linode.com/docs/guides/parent-child-accounts/>`_ relationship, this defines the user type in the respective account.

    * - :action-table-field-name:`username` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`example_user`
      - The User's username.

    * - :action-table-field-name:`verified_phone_number` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`+5555555555`
      - The phone number verified for this User Profile with the `Verify a phone number <https://techdocs.akamai.com/linode-api/reference/post-profile-phone-number-verify>`_ operation.




.. _commands_users_update_attribute_sections_last_login:

.. rst-class:: action-section-header

last_login


.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`last_login.login_datetime` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`2018-01-01T01:01:01`
      - The date and time of this User's most recent login attempt.

    * - :action-table-field-name:`last_login.status` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`successful`
      - The result of the most recent login attempt for this User.









.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON
.. rst-class:: action-has-keywords

.. _commands_users_delete:

`delete <https://techdocs.akamai.com/linode-api/reference/delete-user>`_
------------------------------------------------------------------------

.. rst-class:: action-keyword

:action-keyword-key:`Aliases:`
:action-keyword-values:`rm`


Deletes a user.

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Usage

.. rst-class:: action-subheading-description

The format accepted by this command.



..  code-block:: bash

    linode-cli users delete [-h] username



.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli users delete example_user




.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Parameters

.. rst-class:: action-subheading-description

Positional parameters used to define the resource this command should target.




.. rst-class:: action-parameter-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 98

    * - Name
      - Type
      - Description

    * - :action-table-field-name:`username`
      - :action-table-field-type:`str`
      - The username to look up.












